# tictactoe

./: README.md  tictactoe.cabal
app/: Events.hs  GameState.hs  Main.hs  Render.hs
