cabal-version: 3.0
name: tictactoe
version: 0.2.0
synopsis: A TUI based TicTacToe game written in Haskell
description: A TUI based TicTacToe game written in Haskell
author: dtiderko
maintainer: dennis@tiderko.de
build-type: Simple

common flags
  ghc-options:
    -Wall
    -threaded

executable tictactoe
  import: flags
  main-is: Main.hs
  other-modules:
    Events
    GameState
    Render

  build-depends:
    base,
    brick ==2.9,
    microlens-mtl ==0.2.1.0,
    microlens-th ==0.4.3.17,
    vty ==6.4,

  hs-source-dirs: app
  default-language: Haskell2010
